<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/cobalt">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/welcome_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textSize="20sp"
                        android:text="@string/temp_item_welcome_info"
                        android:layout_alignParentBottom="true"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/temp_item_welcome_text"
                        android:padding="10dp"
                        android:textSize="30sp"
                        android:layout_above="@id/welcome_info"
                        android:textColor="@color/white"/>
                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardElevation="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:cardCornerRadius="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"/>

                    <LinearLayout
                        android:id="@+id/content1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:visibility="invisible"
                        android:background="@color/colorAccent">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="5"
                                android:layout_height="wrap_content"
                                android:text="@string/offer1_offer"
                                android:textSize="25sp"
                                android:padding="10dp"
                                android:textColor="@color/white"/>
                            <Button
                                android:id="@+id/button1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="MORE"
                                android:background="@color/white"
                                android:textColor="@color/colorAccent"/>
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/offer1_name"
                            android:textSize="18sp"
                            android:padding="10dp"
                            android:textColor="@color/white"/>

                    </LinearLayout>
                </FrameLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardElevation="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:cardCornerRadius="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"/>

                    <LinearLayout
                        android:id="@+id/content2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:visibility="invisible"
                        android:background="@color/card_bg">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="5"
                                android:layout_height="wrap_content"
                                android:text="@string/offer2_offer"
                                android:textSize="25sp"
                                android:padding="10dp"
                                android:textColor="@color/white"/>
                            <Button
                                android:id="@+id/button2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="MORE"
                                android:background="@color/white"
                                android:textColor="@color/colorAccent"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/offer2_name"
                            android:textSize="18sp"
                            android:padding="10dp"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                </FrameLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardElevation="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:cardCornerRadius="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"/>

                    <LinearLayout
                        android:id="@+id/content3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:visibility="invisible"
                        android:background="@color/yellow">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="5"
                                android:layout_height="wrap_content"
                                android:text="@string/offer3_offer"
                                android:textSize="25sp"
                                android:padding="10dp"
                                android:textColor="@color/white"/>
                            <Button
                                android:id="@+id/button3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="MORE"
                                android:background="@color/white"
                                android:textColor="@color/colorAccent"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/offer3_name"
                            android:textSize="18sp"
                            android:padding="10dp"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                </FrameLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>